--- a/CSS/booking.css
+++ b/CSS/booking.css
@@ -1,29 +1,19 @@
 .booking {
   width: 100%;
-  display: none;
+  display: flex;
   justify-content: center;
   align-items: center;
-  position: relative;
-}
-
-.booking-open {
-  display: flex;
-}
-
-.shadow {
-  position: fixed;
-  width: 100vw;
-  height: 100vh;
-  background-color: black;
-  opacity: 0.4;
-  top: 0;
 }
 
 .booking-container {
-  position: fixed;
-  border-radius: 2rem;
-  top: 20vh;
-  width: calc(100vw - 20vw);
-  height: 60vh;
+  position: absolute;
+  top: -90vh;
+  width: 100vw;
+  height: 90vh;
+  transition: top 0.4s ease;
   background-color: white;
+}
+
+.booking-container-open {
+  top: 10vh;
 }
