--- a/CSS/main-hotells.css
+++ b/CSS/main-hotells.css
@@ -66,6 +66,11 @@ main {
   cursor: pointer;
   border-radius: 1rem;
   padding: 0.5rem;
+  margin-bottom: 1rem;
+}
+
+.book-btn-close {
+  display: none;
 }
 
 @media screen and (min-width: 768px) {
