feat: add images and image folder

--- a/CSS/header.css
+++ b/CSS/header.css
@@ -48,3 +48,12 @@ h1 {
 .header-exit div:nth-child(2) {
   transform: rotate(-45deg);
 }
+
+.day {
+  cursor: pointer;
+}
+
+.calendar-booked {
+  cursor: inherit;
+  background-color: grey;
+}
