--- a/CSS/booking.css
+++ b/CSS/booking.css
@@ -20,6 +20,7 @@
 }
 
 .booking-form {
+  margin-top: 3rem;
   width: 50vw;
   padding: 0 5rem;
 }
@@ -28,20 +29,84 @@
   text-align: center;
 }
 
+.book-form {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  height: 60vh;
+}
+
+.book-form label {
+  margin-bottom: 0.4rem;
+}
+
+.book-form input,
+.book-form select,
+.book-form button {
+  padding: 0.2rem 0.4rem;
+}
+
+.book-form button {
+  align-self: center;
+  background-color: transparent;
+  position: relative;
+  border: none;
+  width: 10rem;
+  margin-bottom: 2rem;
+  overflow: hidden;
+  border-left: 1px solid black;
+  border-right: 1px solid black;
+  border-radius: 0;
+  cursor: pointer;
+  padding: 0.5rem;
+}
+
+.book-form button::before {
+  position: absolute;
+  content: '';
+  width: 10rem;
+  top: 0;
+  right: -10rem;
+  height: 1px;
+  background-color: black;
+  transition: right 0.5s ease;
+}
+
+.book-form button::after {
+  position: absolute;
+  content: '';
+  width: 10rem;
+  bottom: 0;
+  left: -10rem;
+  height: 1px;
+  background-color: black;
+  transition: left 0.5s ease;
+}
+
+.book-form button:hover::after {
+  left: 0;
+}
+
+.book-form button:hover::before {
+  right: 0;
+}
+
+.book-form-room,
+.book-form-date,
+.book-form-transferCode {
+  display: flex;
+  flex-direction: column;
+}
+
+.book-form-feat div {
+  display: flex;
+}
+
 .calendar-closed {
   display: none;
 }
 
 .calendar-open {
+  margin-top: 3rem;
   display: inline-table;
-}
-
-.form-err {
-  color: white;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 5rem;
-  background-color: red;
 }
