feat: footer bookingUID and styling
styles: Added new typography, added back-arrow on booked page.
Made styling global

--- a/CSS/global.css
+++ b/CSS/global.css
@@ -6,3 +6,50 @@ body {
   margin: 0;
   position: relative;
 }
+
+button {
+  background-color: transparent;
+  border: 1px solid black;
+  cursor: pointer;
+  border-radius: 1rem;
+  padding: 0.5rem;
+  margin-bottom: 1rem;
+  position: relative;
+  border: none;
+  width: 10rem;
+  margin-bottom: 2rem;
+  overflow: hidden;
+  border-left: 1px solid black;
+  border-right: 1px solid black;
+  border-radius: 0;
+}
+
+button::before {
+  position: absolute;
+  content: '';
+  width: 10rem;
+  top: 0;
+  right: -10rem;
+  height: 1px;
+  background-color: black;
+  transition: right 0.5s ease;
+}
+
+button::after {
+  position: absolute;
+  content: '';
+  width: 10rem;
+  bottom: 0;
+  left: -10rem;
+  height: 1px;
+  background-color: black;
+  transition: left 0.5s ease;
+}
+
+button:hover::after {
+  left: 0;
+}
+
+button:hover::before {
+  right: 0;
+}
