--- a/CSS/booked.css
+++ b/CSS/booked.css
@@ -2,12 +2,25 @@ header {
   position: relative;
 }
 
+.header-arrow {
+  position: absolute;
+  left: 2rem;
+  height: 4vh;
+  width: 3rem;
+  height: 3rem;
+}
+
+.header-arrow img {
+  width: 3rem;
+  height: 3rem;
+}
+
 .booked-checkmark {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 4rem;
+  height: 5rem;
 }
 
 .booked-checkmark img {
