--- a/CSS/header.css
+++ b/CSS/header.css
@@ -10,6 +10,7 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
+  position: relative;
   width: 100%;
   height: 10vh;
 }
