--- a/CSS/footer.css
+++ b/CSS/footer.css
@@ -3,17 +3,19 @@ footer {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  height: 40rem;
+  position: relative;
+  height: 30rem;
   border-top: 1px solid black;
 }
 
 .footer-form {
+  position: absolute;
+  top: 2rem;
   display: flex;
   justify-content: space-around;
   align-items: center;
   flex-direction: column;
   height: 8rem;
-  position: relative;
 }
 
 .footer-form div {
@@ -29,13 +31,19 @@ footer {
 
 .footer-result-container {
   max-height: 0;
+  overflow: hidden;
   transition: max-height 3s ease;
 }
 
 .footer-result-container-open {
   color: white;
+  padding: 2rem;
+  max-height: 50rem;
+}
+
+.footer-result {
+  margin-top: 5rem;
   background-color: #2c2f33;
   padding: 2rem;
-  width: 25rem;
-  max-height: 50rem;
+  width: 35rem;
 }
