--- a/CSS/header.css
+++ b/CSS/header.css
@@ -1,10 +1,13 @@
 header {
   position: fixed;
-  box-shadow: 0 0 5px 2px black;
+  box-shadow: 0 0 10px 1px black;
   width: 100%;
   height: 10vh;
   background-color: white;
   z-index: 1;
+}
+.admin-header {
+  position: relative;
 }
 
 .heading {
