--- a/CSS/admin-main.css
+++ b/CSS/admin-main.css
@@ -2,14 +2,14 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  width: 80%;
+  width: 100%;
   height: 60vh;
 }
 
 .pricing-form {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-around;
   text-align: center;
   position: relative;
   height: 40vh;
@@ -29,4 +29,38 @@
   position: absolute;
   right: 1rem;
   bottom: -1rem;
+}
+
+.bookings-container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+}
+
+.bookings-container table {
+  display: flex;
+  justify-content: center;
+  text-align: left;
+  width: 100%;
+  border: 1px solid black;
+  padding: 2rem;
+  border-collapse: collapse;
+}
+
+.bookings-container table td,
+.bookings-container table th {
+  border: 1px solid black;
+  padding: 8px;
+}
+
+.bookings-container table th {
+  width: 8rem;
+}
+.bookings-container table th:last-child {
+  width: 15rem;
+}
+
+.delete-booking-form {
+  padding: 2rem;
 }
