fix: new isBookingAvailable query and admin function
Admin can now change the hotel name and island name on their page. Also the current set values are placeholders.
isBookingAvailable is now based on a query with "BETWEEN"

--- a/CSS/admin-main.css
+++ b/CSS/admin-main.css
@@ -38,6 +38,10 @@
   width: 100%;
 }
 
+.bookings-container p {
+  padding: 1rem 2rem;
+}
+
 .bookings-container table {
   display: flex;
   justify-content: center;
