--- a/CSS/admin-login.css
+++ b/CSS/admin-login.css
@@ -8,8 +8,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  position: relative;
   width: 100%;
-  height: 60vh;
+  height: 90vh;
+  overflow: hidden;
 }
 
 .login-main form {
@@ -18,9 +20,10 @@
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
+  background-color: white;
   padding: 2rem;
   height: 30vh;
-  width: 40vw;
+  width: 30vw;
   border: 1px solid black;
 }
 
@@ -28,6 +31,12 @@
   display: flex;
   flex-direction: column;
   height: 5rem;
+}
+
+.login-main picture {
+  position: absolute;
+  object-fit: cover;
+  z-index: -1;
 }
 
 .login-btn {
